add portfolio page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <body>
     <div id="topContainer">
-      <a href="https://paul-sonsalla-construction.herokuapp.com" class="portfolio-button">Portfolio</a>
+      <a href="portfolio.html" class="portfolio-button">Portfolio</a>
       <img class="mountains" src="images/mountains.jpg" alt="mountain" />
       <div class="heading">
         <h1>Hi I'm Klint</h1>
