--- a/portfolio.html
+++ b/portfolio.html
@@ -30,13 +30,9 @@
 
 <body>
 
-<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-  <div class="col-md-5 p-lg-5 mx-auto my-5">
+<div class="portfolio-title position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center ">
     <h1 class="display-4 font-weight-normal">Portfolio</h1>
     <p class="lead font-weight-normal">Here are some of my most recent completed and in progress projects</p>
-  </div>
-  <div class="product-device shadow-sm d-none d-md-block"></div>
-  <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
 </div>
 
 <div class="container marketing">
@@ -46,11 +42,12 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h3 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h3>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h3 class="featurette-heading"><a href= "https://paul-sonsalla-construction.herokuapp.com/" target="_blank">Paul Sonsalla Construction</a></h3>
+        <br>
+        <p class="lead"> Responsive website built with HTML, CSS, Bootstrap, and Node.js. The goal for this site was just to showcase some of the owners work.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="images/Screenshots/Paul-Sonsalla-Construction.png" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect></img>
       </div>
     </div>
 
@@ -58,11 +55,12 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h3 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h3>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h3 class="featurette-heading"><a href="https://github.com/klintwales/Inventory" target="_blank">Inventory App</a></h3>
+        <br />
+        <p class="lead">This is a personal project of mine that I built from the ground up. The goal was to make a simple personal inventory app. It is an Android native app built in Java and xml, but uses a parse database for the backend.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" height="500" src="images/Screenshots/inventory.png" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect></img>
       </div>
     </div>
 
@@ -70,11 +68,12 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h3 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h3>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h3 class="featurette-heading"><a href="https://enigmatic-waters-00550.herokuapp.com/" target="_blank">To Do List</a></h3>
+        <br />
+        <p class="lead">This was a class project that I completed on<a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Udemy.</a>It involved using HTML, CSS, Bootstrap, Node.js, and utilizes a mongo database.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" height="500" src="images/Screenshots/toDo.png" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect></img>
       </div>
     </div>
 
