Add shadows to images

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
 
 <div class="portfolio-title position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center ">
     <h1 class="display-4 font-weight-normal">Portfolio</h1>
-    <p class="lead font-weight-normal">Here are some of my most recent completed and in progress projects</p>
+    <p class="lead font-weight-normal">Here are some of my most recent completed, and in progress projects. Click on each title for more information.</p>
 </div>
 
 <div class="container marketing">
@@ -46,7 +46,7 @@
         <br>
         <p class="lead"> Responsive website built with HTML, CSS, Bootstrap, and Node.js. The goal for this site was just to showcase some of the owners work.</p>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-5" href= "https://paul-sonsalla-construction.herokuapp.com/">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="images/Screenshots/Paul-Sonsalla-Construction.png" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect></img>
       </div>
     </div>
