--- a/index.html
+++ b/index.html
@@ -1,81 +1,79 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-    <title>Klint Wales</title>
 
-    <link rel="icon" href="images/favicon.ico" />
-    <!--Google Fonts-->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <!--Bootstrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <!--CSS-->
-    <link rel="stylesheet" href="styles.css" />
+<head>
+  <meta charset="utf-8" />
+  <title>Klint Wales</title>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HQ9FW96FEV"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  <link rel="icon" href="images/favicon.ico" />
+  <!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
+  <!--Bootstrap-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
+  <!--CSS-->
+  <link rel="stylesheet" href="styles.css" />
 
-      gtag('config', 'G-HQ9FW96FEV');
-    </script>
-  </head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HQ9FW96FEV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  <body>
-    <div id="topContainer">
-      <a href="portfolio.html" class="portfolio-button">Portfolio</a>
-      <img class="mountains" src="images/mountains.jpg" alt="mountain" />
-      <div class="heading">
-        <h1>Hi I'm Klint</h1>
-        <h2 id="subtitle">software developer</h2>
-      </div>
+    gtag('config', 'G-HQ9FW96FEV');
+  </script>
+</head>
+
+<body>
+  <div id="topContainer">
+    <a href="portfolio.html" class="portfolio-button">Portfolio</a>
+    <img class="mountains" src="images/mountains.jpg" alt="mountain" />
+    <div class="heading">
+      <h1>Hi I'm Klint</h1>
+      <h2 id="subtitle">software developer</h2>
     </div>
-    <div class="middle-container">
-      <div class="profile">
-        <img src="images/headshot.png" alt="Klint Wales" class="headshot" />
-        <h2>Welcome</h2>
-        <p>This is my offical site</p>
-      </div>
-      <hr />
-      <div class="skills">
-        <h2>My Skills</h2>
-        <br>
-        <br>
-        <div>
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-4">
-                <img class="skillImage" src="images/html.jpg" id="skillImage1" alt="HTML Image" />
-              </div>
-              <div class="col-sm-8 html-text">
-                <h3 id="html-title">HTML</h3>
-                <p id="html-text">
-                  I have completed multiple projects in HTML, CSS, and Javascript.
-                </p>
-              </div>
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="images/headshot.png" alt="Klint Wales" class="headshot" />
+      <h2>Welcome</h2>
+      <p>This is my offical site</p>
+    </div>
+    <hr />
+    <div class="skills">
+      <h2>My Skills</h2>
+      <br>
+      <br>
+      <div>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+              <img class="skillImage" src="images/html.jpg" id="skillImage1" alt="HTML Image" />
+            </div>
+            <div class="col-sm-8 html-text">
+              <h3 id="html-title">HTML</h3>
+              <p id="html-text">
+                I have completed multiple projects in HTML, CSS, and Javascript.
+              </p>
             </div>
           </div>
+        </div>
 
-          <br>
-          <br>
-          <br>
-          <br>
+        <br>
+        <br>
+        <br>
+        <br>
 
         <div class="container">
           <div class="row">
@@ -87,7 +85,8 @@
               </p>
             </div>
             <div class="col-sm-4 android-image">
-              <img class="skillImage" src="https://image.flaticon.com/icons/svg/888/888839.svg" id="skillImage2" alt="Skill Image" />
+              <!--https://pixabay.com/illustrations/icon-transparent-image-android-1971128/-->
+              <img class="skillImage" src="images/android.png" id="skillImage2" alt="Skill Image" />
             </div>
           </div>
         </div>
@@ -126,13 +125,10 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/klintwales/"
-        >LinkedIn</a
-      >
-      <a class="footer-link" href="https://github.com/klintwales"
-        >GitHub</a
-      >
+      <a class="footer-link" href="https://www.linkedin.com/in/klintwales/">LinkedIn</a>
+      <a class="footer-link" href="https://github.com/klintwales">GitHub</a>
       <p class="copyright">© 2020 Klint Wales</p>
     </div>
-  </body>
+</body>
+
 </html>
